--- a/CMMediaToolSeeding/Form1.resx
+++ b/CMMediaToolSeeding/Form1.resx
@@ -57,6 +57,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="label5.Text" xml:space="preserve">
+    <value>Lưu ý: Khi click nút Run vui lòng để im cho nó tự chạy theo kịch bản. Không được tắt trình duyệt khi đang chạy
+Tắt lỗi ráng chịu =)))). Nếu lỗi thì có thể bật task manager lên End Task CM Media Seeding rồi mở file lên lại</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
